Fix for language codes and Spanish
http://www.w3.org/International/articles/language-tags/ "The golden rule
when creating language tags is to keep the tag as short as possible.
Avoid region, script or other subtags except where they add useful
distinguishing information."

Closes #18984.

Signed-off-by: Jack Nagel <jacknagel@gmail.com>

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="{{ page.lang }}" lang="{{ page.lang }}">
   <head>
     <title>{{ page.title }}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -29,7 +29,7 @@
             {% if page.lang == lang.langcode %}
                 {{ lang.lang_string }}
             {% else %}
-                <a href={% if lang.langcode == 'en' %}"index.html"{% else %}"index_{{ lang.langcode }}.html"{% endif %}>
+                <a href={% if lang.langcode == 'en' %}"index.html"{% else %}"index_{{ lang.langcode | downcase }}.html"{% endif %}>
                 {{ lang.lang_string }}
                 </a>
             {% endif %}
